--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
   }
 
   body {
-    height: 100vh;
     margin: 0;
    display: flex;
    flex-direction: column;
@@ -45,8 +44,8 @@
 }
 
 .music-card {
-    width: 70vw;
-    max-height: 70vh;
+    width: 90vw;
+    height: 70vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -99,13 +98,13 @@
 
 .trivia-controls {
     padding: 20px;
+  
 }
 
 .trivia {
     margin-bottom: 4rem;
     margin-top: -2rem;
     text-align: center;
-    height: 10rem;
     font-family: Arial, Helvetica, sans-serif;
 }
 
@@ -232,6 +231,11 @@
    #singer {
        font-size: 1rem;
    }
+
+   .img-container img {
+       height: 120px;
+       width: 120px;
+   }
    
     .appName{
         font-size: 3rem;
@@ -259,10 +263,6 @@
  @media screen and (max-width: 780px) {
 
   
-   .trivia{
-       margin-top:-120px ;
-       display: none;
-   }
    .action-btn {
     background: rgb(27, 27, 27);
     font-size: 0.9rem;
@@ -281,6 +281,13 @@
       height: 100px;
       width: 100px;
     }
+    .music-card{
+        display: block;
+    }
+
+    .trivia{
+        display: none;
+    }
 
     #title{
         font-size: 1.1rem;
@@ -298,9 +305,9 @@
        font-size: 0.6rem;
     }
 
-   .trivia {
+   /* .trivia {
        margin-bottom: -30px;
-   }
+   } */
 
    .trivia h1{
     font-size: 1rem;
@@ -317,7 +324,11 @@
  @media screen and (max-width: 550px){
     .action-btn {
         background: rgb(27, 27, 27);
-        font-size: 0.6rem;
+        font-size: 1rem;
     
+    }
+    .copyright {
+     
+       font-size: 0.4rem;
     }
  }
