--- a/style.css
+++ b/style.css
@@ -74,6 +74,10 @@
     animation-play-state: running;
 }
 
+.copyright {
+    display: none;
+}
+
 @keyframes rotate {
     from{
           transform: rotate(0deg);
@@ -128,6 +132,13 @@
     margin-top: -1rem;
     height: 4px;
     width: 100%;
+    position: relative;
+}
+
+.songTime{
+    position:absolute ;
+    right: 0;
+    top: 0.3rem;
 }
 
 .progress {
@@ -136,6 +147,9 @@
     height: 100%;
     width: 0;
     transition: width 0.1s linear;
+}
+.songDuration{
+    color: white;
 }
 
 .navigation {
